--- a/CSManagement/CSManagement/Views/Pictures/Create.cshtml
+++ b/CSManagement/CSManagement/Views/Pictures/Create.cshtml
@@ -22,13 +22,19 @@
             <!-- /.box-header -->
             <div class="box-body" style="font-size:15px">
                 <div class="row">
-                    <div class="form-group col-lg-9">
+                    <div class="form-group col-lg-4">
                         @Html.LabelFor(model => model.Pic_Name, "คำอธิบายรูปภาพ", htmlAttributes: new { @class = "control-label" })
                         @Html.EditorFor(model => model.Pic_Name, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Pic_Name, "", new { @class = "text-danger" })
                     </div>
 
-                    <div class="form-group col-lg-3">
+                    <div class="form-group col-lg-4">
+                        @Html.LabelFor(model => model.Pic_Link, "ลิ้งค์ของรูปภาพ", htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Pic_Link, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Pic_Link, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group col-lg-4">
                         @Html.LabelFor(model => model.Pic_Img, "เลือกรูปภาพ", htmlAttributes: new { @class = "control-label" })
                         <input type="file" id="file" name="file">
                     </div>
