--- a/CSManagement/CSManagement/Views/Pictures/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Pictures/Edit.cshtml
@@ -6,30 +6,32 @@
 }
 
 <h2>Edit</h2>
-
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Pictures", FormMethod.Post, new { enctype = "multipart/form-data", accept_charset = "utf-8" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Picture</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Pic_ID)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Pic_Img, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Pic_Img, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Pic_Img, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Pic_Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+        <div class="row">
+            <div class="form-group col-lg-4">
+                @Html.LabelFor(model => model.Pic_Name, "คำอธิบายรูปภาพ", htmlAttributes: new { @class = "control-label" })
                 @Html.EditorFor(model => model.Pic_Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Pic_Name, "", new { @class = "text-danger" })
+            </div>
+
+            <div class="form-group col-lg-4">
+                @Html.LabelFor(model => model.Pic_Link, "ลิ้งค์ของรูปภาพ", htmlAttributes: new { @class = "control-label" })
+                @Html.EditorFor(model => model.Pic_Link, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Pic_Link, "", new { @class = "text-danger" })
+            </div>
+
+            <div class="form-group col-lg-4">
+                @Html.LabelFor(model => model.Pic_Img, "เลือกรูปภาพ", htmlAttributes: new { @class = "control-label" })
+                <input type="file" id="file" name="file">
             </div>
         </div>
 
