--- a/CSManagement/CSManagement/Views/Pictures/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Pictures/Index.cshtml
@@ -54,8 +54,7 @@
             <table id="example1" class="table table-bordered table-striped" style="width:100%">
                 <thead>
                     <tr>
-                        <th style="text-align:center">ที่</th>
-                        <th style="text-align:center">รูปภาพ</th>
+                        <th style="text-align:center">ลิ้งค์รูปภาพ</th>
                         <th style="text-align:center">คำอธิบาย</th>
                         <th style="text-align:center">จัดการข้อมูล</th>
                     </tr>
@@ -64,12 +63,11 @@
                     @foreach (var item in Model)
                     {
                         <tr>
-                            <td style="text-align:center">@(i++)</td>
-                            <td>@Html.DisplayFor(modelItem => item.Pic_Img)</td>
+                            <td>@Html.DisplayFor(modelItem => item.Pic_Link)</td>
                             <td>@Html.DisplayFor(modelItem => item.Pic_Name)</td>
                             <td style="text-align:center">
                                 <div class="delete-section">
-                                    @*<a class="btn btn-info" href="@Url.Action("Details", "Pictures", new { id = item.Pic_ID })"><i class="fa fa-list-ul"></i> รายละเอียด</a>*@
+                                    <a class="btn btn-info" href="@Url.Action("Edit", "Pictures", new { id = item.Pic_ID })"><i class="fa fa-list-ul"></i> แก้ไข</a>
                                     <a class="btn btn-primary delete-link" href="@Url.Action("Delete", new {id = item.Pic_ID})"><i class="fa  fa-trash-o"></i> ลบข้อมูล</a>
                                     <div class="btn btn-danger delete-confirm" style="display:none" data-delete-id="@item.Pic_ID"><i class="fa  fa-trash-o"></i> ยืนยันการลบ</div>
                                 </div>
