--- a/CSManagement/CSManagement/Views/Histories/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Histories/Index.cshtml
@@ -36,7 +36,7 @@
                     {
                         <tr>
                             <td style="text-align:center">@(i++)</td>
-                            <td>@item.Student.Stu_Title@item.Student.Stu_Name @item.Student.Stu_Surname</td>
+                            <td>@item.Student.Title.Title_Name@item.Student.Stu_Name @item.Student.Stu_Surname</td>
                             <td>@Html.DisplayFor(modelItem => item.Job.JOB_Name)</td>
                             <td>@Html.DisplayFor(modelItem => item.HIS_Jobname)</td>
                             <td>@Html.DisplayFor(modelItem => item.HIS_Company)</td>
