--- a/CSManagement/CSManagement/Views/Home/IndexUserGrap.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUserGrap.cshtml
@@ -51,7 +51,7 @@
                         </div>
                         <div class="panel-body">
                             <p>
-                                เมื่อสำเร็จการศึกษาจากหลกัสูตรนี้แล้ว นักศึกษาจะมีคุณลักษะดังนี้  <br />
+                                เมื่อสำเร็จการศึกษาจากหลักสูตรนี้แล้ว นักศึกษาจะมีคุณลักษะดังนี้  <br />
                                 1. มีความรู้ความสามารถทางวิชาการด้านวิทยาการคอมพิวเตอร์ ทั้งภาคทฤษฎี และภาคปฏิบัติ สามารถนำไปประยุกต์ใช้ในการประกอบอาชีพและศึกษาต่อในระดับสูงได้ <br />
                                 2. มีเจตคติทางวิทยาการคอมพิวเตอร์ มีความคิดริเริ่มสร้างสรรค์และมีจิตอาสา สามารถนำไปประยุกต์ใช้ใน การเรียนและปฏิบัติงาน อย่างมีคุณธรรม จริยธรรม และตระหนักในจรรยาบรรณวิชาชีพ<br />
                                 3. มีทักษะด้านการค้นคว้าและถ่ายทอด เพื่อศึกษาหาความรู้ด้านวิทยาการคอมพิวเตอร์ในระดับที่สูงขึ้น และพัฒนาตนเองอย่างต่อเนื่องตลอดชีวิต
