--- a/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
@@ -96,7 +96,7 @@
                             <a href="@Url.Action("Index", "Departments")"><i class="fa fa-user"></i> <span>ข้อมูลหมวดวิชา</span></a>
                         </li>
                         <li>
-                            <a href="@Url.Action("Index", "Department_Sup")"><i class="fa fa-user"></i> <span>ข้อมูลหมวดวิชา</span></a>
+                            <a href="@Url.Action("Index", "Department_Sup")"><i class="fa fa-user"></i> <span>ข้อมูลวิชา</span></a>
                         </li>
                         <li>
                             <a href="@Url.Action("Index", "Pictures")"><i class="fa fa-user"></i> <span>รูปภาพประชาสัมพันธ์</span></a>
