--- a/CSManagement/CSManagement/Views/Students/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Students/Index.cshtml
@@ -30,7 +30,7 @@
                 {
                     <tr>
                         <td>@Html.DisplayFor(modelItem => item.Stu_ID)</td>
-                        <td>@item.Stu_Title @item.Stu_Name @item.Stu_Surname</td>
+                        <td>@item.Title.Title_Name@item.Stu_Name @item.Stu_Surname</td>
                         <td>@Html.DisplayFor(modelItem => item.Stu_Birthday)</td>
                         <td>@Html.DisplayFor(modelItem => item.Stu_Tel)</td>
                         @* 1 = กำลังศึกษาอยู่ / 2 = สำเร็จการศึกษา / 3 = เกียรตินิยมอันดับ 1 / 4 = เกียรตินิยมอันดับ 2 / 5 = พ้นสภาพการเป็นนักศึกษา / 6 = พักการเรียน *@
