--- a/CSManagement/CSManagement/Views/Students/Create.cshtml
+++ b/CSManagement/CSManagement/Views/Students/Create.cshtml
@@ -28,7 +28,7 @@
 
                     <div class="form-group col-md-3">
                         @Html.LabelFor(model => model.Stu_Title, htmlAttributes: new { @class = "control-label" })
-                        @Html.DropDownList("Tea_TitleID", null, "เลือกคำนำหน้า", htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownList("Stu_Title", null, "เลือกคำนำหน้า", htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Stu_Title, "", new { @class = "text-danger" })
                     </div>
 
