--- a/CSManagement/CSManagement/Views/Students/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Students/Edit.cshtml
@@ -11,7 +11,7 @@
     <section class="content">
         <div class="box box-default">
             <div class="box-header with-border">
-                <h3 class="box-title" style="font-family: 'Kanit', sans-serif">เพิ่มข้อมูลนักศึกษา</h3>
+                <h3 class="box-title" style="font-family: 'Kanit', sans-serif">แก้ไขข้อมูลนักศึกษา</h3>
 
                 <div class="box-tools pull-right">
                     <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
@@ -29,7 +29,7 @@
 
                     <div class="form-group col-md-3">
                         @Html.LabelFor(model => model.Stu_Title, htmlAttributes: new { @class = "control-label" })
-                        @Html.DropDownList("Tea_TitleID", null, "เลือกคำนำหน้า", htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownList("Stu_Title", null, "เลือกคำนำหน้า", htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.Stu_Title, "", new { @class = "text-danger" })
                     </div>
 
