--- a/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
@@ -153,7 +153,7 @@
                             <div class="col-md-3">
                                 <div class="top-res-container mar-r">
                                     <div class="top-res-pic">
-                                        <img src="~/Content/img/img-test-300-150.jpg" />
+                                        <img src="~/img/@item.New_Img" width="300" height="150" />
                                     </div>
 
                                     <div class="top-res-content">
