--- a/CSManagement/CSManagement/Views/Shared/_LayoutUser.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_LayoutUser.cshtml
@@ -31,10 +31,10 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="@Url.Action("IndexUser", "Home")">หน้าหลัก</a></li>
-                    <li><a href="@Url.Action("IndexUser", "Generations")">หลักสูตรอบรม</a></li>
-                    <li><a href="@Url.Action("IndexUser", "Projects")">ผลงานนักศึกษา</a></li>
                     <li><a href="@Url.Action("IndexUserGrap", "Home")">หลักสูตรสาขา</a></li>
+                    <li><a href="@Url.Action("IndexUser", "Projects")">ผลงานนักศึกษา</a></li>
                     <li><a href="@Url.Action("IndexUser", "Teachers")">บุคคลากร</a></li>
+                    <li><a href="@Url.Action("IndexUser", "Generations")">คอร์สอบรม</a></li>
                     @{
                         if (Session["UserID"] != null)
                         {
