--- a/CSManagement/CSManagement/Views/Shared/_Layout1.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Layout1.cshtml
@@ -41,12 +41,12 @@
         </a>
     </div>
 
-        <div class="row">
-            <div class="col-md-12" style="text-align: center; padding-top: 50px;padding-bottom: 50px">
-                <button class="button col-md-4 col-sm-12" style="vertical-align: middle;background-color: #f4511e;"><span>สมัครเรียน </span></button>
-                <button class="button col-md-4 col-sm-12" style="vertical-align: middle;background-color: #008000;"><span>ผลงานนักศึกษา </span></button>
-                <button class="button col-md-4 col-sm-12" style="vertical-align: middle;background-color: #cd853f;"><span>เราเรียนอะไรบ้าง </span></button>
-            </div>
+    <div class="row">
+        <div class="col-md-12" style="text-align: center; padding-top: 50px;padding-bottom: 50px">
+            <button class="button col-md-4 col-sm-12" style="vertical-align: middle;background-color: #f4511e;" href="http://register.kru.ac.th/reg/"><span>สมัครเรียน </span></button>
+            <button class="button col-md-4 col-sm-12" style="vertical-align: middle;background-color: #008000;" href="http://coms.kru.ac.th/tee/Home/IndexUser"><span>เข้าสู่เว็บไซต์ </span></button>
+            <button class="button col-md-4 col-sm-12" style="vertical-align: middle;background-color: #cd853f;" href="http://coms.kru.ac.th/tee/Projects/IndexUser"><span>เราเรียนอะไรบ้าง </span></button>
+        </div>
     </div>
 
     @RenderBody()
