--- a/CSManagement/CSManagement/Views/Shared/_LayoutUser.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_LayoutUser.cshtml
@@ -259,8 +259,10 @@
             <div class="row">
                 <div class="col-md-8 col-sm-6 col-xs-12">
                     <p class="copyright-text">
-                        Copyright &copy; 2020 All Rights Reserved by
-                        <a href="#">Computer Science</a>.
+                        Copyright &copy; 2020 All Rights Created by
+                        <a href="https://www.facebook.com/TiceTmP">Pattarapon Songarsa</a>.
+                        Designed by 
+                        <a href="https://www.facebook.com/mind.indy.1610">Yanee Wongtanhuad</a>.
                     </p>
                 </div>
 
