--- a/CSManagement/CSManagement/Views/Generations/Details.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/Details.cshtml
@@ -66,7 +66,7 @@
                     <tr>
                         <th>@Html.DisplayNameFor(model => model.Gen_PDF)</th>
                         <td>
-                            <a target="_blank" href="@Url.Action("forpdfview", "Projects")?id=@Model.Gen_PDF">
+                            <a href="@Url.Action("forpdfview", "Projects")?id=@Model.Gen_PDF">
                                 เปิดอ่าน
                             </a>
                         </td>
