--- a/CSManagement/CSManagement/Views/Generations/showdetails.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/showdetails.cshtml
@@ -35,7 +35,7 @@
             <tr>
                 <th style="text-align: center">รายะเอียดทั้งหมด</th>
                 <td>
-                    <a target="_blank" href="@Url.Action("forpdfview", "Projects")?id=@Model.Gen_PDF">
+                    <a href="@Url.Action("forpdfview", "Projects")?id=@Model.Gen_PDF">
                         เปิดอ่าน
                     </a>
                 </td>
