--- a/CSManagement/CSManagement/Views/Home/IndexUserGrap.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUserGrap.cshtml
@@ -145,7 +145,7 @@
                                 @if (ViewBag.pdf != null)
                                 {
                                     <button>
-                                        <a target="_blank" href="@Url.Action("forpdfview", "Projects")?id=@ViewBag.pdf">
+                                        <a href="@Url.Action("forpdfview", "Projects")?id=@ViewBag.pdf">
                                             ดูข้อมูลหลักสูตร
                                         </a>
                                     </button>
