--- a/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
@@ -138,10 +138,8 @@
         <div class="content">
             <div class="w3-bar" style="color: #fff!important;">
                 <button class="w3-bar-item w3-button" onclick="openNews('news')">ข่าวล่าสุด</button>
-                <button class="w3-bar-item w3-button" onclick="openNews('Paris')">ข่าวประชาสัมพันธ์</button>
-                <button class="w3-bar-item w3-button" onclick="openNews('Paris')">วิชาการ</button>
-                <button class="w3-bar-item w3-button" onclick="openNews('Tokyo')">กิจกรรม</button>
-                <button class="w3-bar-item w3-button" onclick="openNews('all')">ทั้งหมด >></button>
+                <a class="see-more-btn" href="@Url.Action("IndexUser","News")">ทั้งหมด>></a>
+
             </div>
             <div class="border-bottom"></div>
 
@@ -159,11 +157,11 @@
                                     <div class="top-res-content">
                                         <h1 class="top-res-head">@item.New_Name.Substring(0, Math.Min(20, @item.New_Name.Length))</h1>
                                         <p class="top-res-detail">
-                                            @item.New_Details
+                                            @item.New_Details.Substring(0, Math.Min(30, @item.New_Details.Length))...
                                         </p>
 
                                         <div class="see-more">
-                                            <button class="see-more-btn" href="@Url.Action("IndexUser","News")?id=@item.New_ID">อ่านต่อ</button>
+                                            <a class="see-more-btn" href="@Url.Action("IndexUser","News")?id=@item.New_ID">อ่านต่อ</a>
                                         </div>
                                     </div>
 
@@ -214,9 +212,7 @@
                                 <div class="profile-img">
                                     <img class="img-circle" style="height:80px;" img src="~/img/@item.Stu_Img" />
                                 </div>
-                                <div style="        margin-left: 10px;
-        padding-left: 10px
-">
+                                <div style=" margin-left: 10px;padding-left: 10px">
                                     <p3-bold>@item.Stu_Name @item.Stu_Surname</p3-bold><br />
                                     <p3-bold>@item.Pj_StuID</p3-bold><br />
                                     <p5>เรื่อง : @item.Pj_NameTH</p5>
@@ -224,9 +220,16 @@
                             </div>
                             <div class="box-footer no-padding">
                                 <ul class="nav nav-stacked">
-                                    <li><a target="_blank" href="@item.Pj_Linkweb">เว็บไซต์<span class="pull-right badge bg-blue">เข้าชม</span></a></li>
+                                    @if (item.Pj_Linkweb != null) 
+                                    {
+                                        <li><a href="@item.Pj_Linkweb">เว็บไซต์<span class="pull-right badge bg-blue">เข้าชม</span></a></li>
+                                    }
+                                    else
+                                    {
+                                        <li><a>เว็บไซต์<span class="pull-right badge bg-blue">ไม่มี</span></a></li>
+                                    }
                                     <li>
-                                        <a target="_blank" href="@Url.Action("forpdfview", "Projects")?id=@item.Pj_File">
+                                        <a href="@Url.Action("forpdfview", "Projects")?id=@item.Pj_File">
                                             รูปเล่ม
                                             <span class="pull-right badge bg-aqua">เข้าชม</span>
                                         </a>
@@ -273,67 +276,22 @@
         </header>
         <br />
         <div class="row">
-            <div class="col-md-4">
-                <div class="w3-card">
-                    <img src="~/Content/img/programmer.png" alt="Avatar" style="width:100%">
-                    <div class="card-body" style="margin: 15px; height: 100px">
-                        <h4><b>พัฒนาการเขียนโปรแกรม</b></h4>
-                        <p>พัฒนาการเขียนโปรแกรมทั้งแบบ OOP และ Structure เช่น C#, Python</p>
+            @if (ViewBag.Syll != null)
+            {
+                foreach (var item in ViewBag.Syll)
+                {
+                    <div class="col-md-4">
+                        <div class="w3-card">
+                            <img src="~/img/@item.Sy_Img" alt="Avatar" style="width: 100%">
+                            <div class="card-body" style="margin: 15px; height: 100px">
+                                <h4><b>@item.Sy_Name</b></h4>
+                                <p>@item.Sy_Details</p>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
+                }
+            }
 
-            <div class="col-md-4">
-                <div class="w3-card">
-                    <img src="~/Content/img/app.png" alt="Avatar" style="width:100%">
-                    <div class="card-body" style="margin:15px;height:100px">
-                        <h4 style="letter-spacing: 0px;"><b>พัฒนาแอพพลิเคชั่น</b></h4>
-                        <p>พัฒนาแอพพลิชั่นด้วย Cross platform เช่น Xamarin, Ionic, React</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="w3-card">
-                    <img src="~/Content/img/webApp.png" alt="Avatar" style="width:100%">
-                    <div class="card-body" style="margin:15px;height:100px">
-                        <h4 style="letter-spacing: 0px;"><b>พัฒนาเว็บแอพพลิเคชั่น</b></h4>
-                        <p>พัฒนาเว็บแอพพลิเคชั่นที่ทำงานได้จริง เช่น Asp.Net MVC, PHP, Angular, React JS, Javascript</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-4">
-                <div class="w3-card">
-                    <img src="~/Content/img/GameDev.jpg" alt="Avatar" style="width:100%">
-                    <div class="card-body" style="margin:15px;height:100px">
-                        <h4 style="letter-spacing: 0px;"><b>พัฒนาการเขียนเกมส์</b></h4>
-                        <p>พัฒนาการเขียนเกมส์ด้วยโปรแกรม Unity 3D</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="w3-card">
-                    <img src="~/Content/img/graphic.png" alt="Avatar" style="width:100%">
-                    <div class="card-body" style="margin:15px;height:100px">
-                        <h4 style="letter-spacing: 0px;"><b>พัฒนากราฟิกดีไซน์</b></h4>
-                        <p>ออกแบบกราฟิกดีไซน์ เช่น การออกแบบป้ายต่างๆ</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4">
-                <div class="w3-card">
-                    <img src="~/Content/img/Network.jpg" alt="Avatar" style="width:100%">
-                    <div class="card-body" style="margin:15px;height:100px">
-                        <h4 style="letter-spacing: 0px;"><b>พัฒนาเครือข่าย</b></h4>
-                        <p>พัฒนาจัดการเครือข่ายอินเตอร์เน็ตโดยเครื่องใช้งานจริง</p>
-                    </div>
-                </div>
-            </div>
         </div>
 
         @*<div class="row">
@@ -445,18 +403,18 @@
 
 <script>
     function myFunction(name) {
-        window.open(name, '_blank');
+        window.open(name);
     }
 </script>
 
 <script>
     function gotopage1() {
-        window.open('../Home/IndexUserGrap', '_blank');
+        window.open('../Home/IndexUserGrap');
     }
 </script>
 
 <script>
     function gotopage2() {
-        window.open('../Home/Indexoldstudent', '_blank');
+        window.open('../Home/Indexoldstudent');
     }
 </script>
