--- a/CSManagement/CSManagement/Views/Projects/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Projects/Index.cshtml
@@ -38,15 +38,23 @@
                         <tr>
                             <td style="text-align:center">@(i++)</td>
                             <td>@item.Student.Title.Title_Name@item.Student.Stu_Name @item.Student.Stu_Surname</td>
-                            <td>@Html.ActionLink(@item.Pj_NameTH.Substring(0, Math.Min(40, @item.Pj_NameTH.Length)), "Details", new { id = item.Pj_ID }, new { target = "_blank" })</td>
+                            <td>@Html.ActionLink(@item.Pj_NameTH.Substring(0, Math.Min(40, @item.Pj_NameTH.Length)), "Details", new { id = item.Pj_ID })</td>
                             <td style="text-align:center">@Html.DisplayFor(modelItem => item.Pj_TypePj)</td>
                             <td>
-                                <a class="btn btn-info" target="_blank" href="@Url.Action("forpdfview", "Projects")?id=@item.Pj_File"><i class="fa fa-file-text-o"></i> อ่านงานวิจัย</a>
+                                <a class="btn btn-info" href="@Url.Action("forpdfview", "Projects")?id=@item.Pj_File"><i class="fa fa-file-text-o"></i> อ่านงานวิจัย</a>
                             </td>
                             <td>@Html.DisplayFor(modelItem => item.Pj_Date)</td>
                             <td style="text-align: center">
                                 <div class="delete-section">
-                                    <a class="btn btn-info" href="@item.Pj_Linkweb"><i class="fa fa-globe"></i> ดูเว็บไซต์</a>
+                                    @if (@item.Pj_Linkweb != null)
+                                    {
+
+                                        <a class="btn btn-info" href="@item.Pj_Linkweb"><i class="fa fa-globe"></i> ดูเว็บไซต์</a>
+                                    }
+                                    else
+                                    {
+                                        <a class="btn btn-info">ไม่มี</a>
+                                    }
                                     @if (Session["AJ"] != null)
                                     {
                                         <a class="btn btn-primary delete-link" href="@Url.Action("Delete", new {id = item.Pj_ID})">ลบข้อมูล</a>
