--- a/CSManagement/CSManagement/Views/Short_Course/Create.cshtml
+++ b/CSManagement/CSManagement/Views/Short_Course/Create.cshtml
@@ -31,6 +31,18 @@
                     </div>
                 </div>
 
+
+                <div class="row">
+                    <div class="form-group col-md-2" style="text-align:right">
+                        @Html.LabelFor(model => model.SC_Details, htmlAttributes: new { @class = "control-label" })
+                    </div>
+                    <div class="form-group col-md-10">
+                        @Html.EditorFor(model => model.SC_Details, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.SC_Details, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+
                 <hr />
                 <div class="text-center">
                     <button type="submit" class="btn btn-success col-md-3" style="float:right;font-size:18px"><i class="fa fa-save"></i> บันทึกข้อมูล</button>
