--- a/CSManagement/CSManagement/Views/Short_Course/Report_Index.cshtml
+++ b/CSManagement/CSManagement/Views/Short_Course/Report_Index.cshtml
@@ -2,7 +2,6 @@
 @{
     ViewBag.Title = "Report_Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    int i = 1;
 }
 
 <section class="content">
@@ -13,7 +12,7 @@
             {
                 <div class="box-body">
                     <div class="row">
-                        <button style="float: right;" class="btn btn-success col-md-3" href="@Url.Action("ExportToExcel","Short_Course",new {SC = Session["ViewSCID"]})">ดาวน์โหลดไฟล์ Excel</button>
+                        <a style="float: right;" class="btn btn-success col-md-3" href="@Url.Action("ExportToExcel","Short_Course")?SC=@Session["ViewSCID"]">ดาวน์โหลดไฟล์ Excel</a>
                         <button type="submit" class="btn btn-success col-md-3" style="float: right;padding-right:10px"><i class="fa fa-search"></i> ค้นหาตามชื่อคอร์ส</button>
                         <div class="col-md-6" style="float: right;">
                             @Html.DropDownList("SC", null, "เลือกชื่อคอร์ส", htmlAttributes: new { @class = "form-control" })
@@ -37,7 +36,6 @@
                         @foreach (var item in Model)
                         {
                             <tr>
-                                <td style="text-align:center">@(i++)</td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.REG_Name)
                                 </td>
