--- a/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
@@ -24,7 +24,7 @@
             {
                 i++;
                 var active = i == 1 ? "active" : "";
-                <div class="item @active">
+                <div class="carousel-item @active">
                     <a style="cursor: pointer;" onclick="myFunction('@item.Pic_Link')">
                         <img src="~/imgSlideShow/@item.Pic_Img" style="width:100%; height: 100%;" />
                     </a>
